# RetroCheck

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md  build.rs  findings.md  progress.md  task_plan.md  test_output.txt  verify.ps1
DOC/: code_audit_raft_router.md  code_audit_todo_2026-03-13.md  distributed_transaction_design.md  distributed_transaction_design_EN.md  hub_edge_dynamic_registration_design.md  unified_sql_standard_spec_zh.md  x_promo_posts.md
docs/backup/: README.md  cluster_admin_service.rs.bak  cluster_admin_service_outer.rs
docs/changes/: 2026-02-28-smart-batcher-fix.md  2026-03-05-stability-robustness-audit.md  2026-03-09-weak-network-low-power-baseline.md
docs/plans/: 2026-02-17-actor-refactor.md  2026-02-17-batch-cancel-consistency.md  2026-02-17-cli-standardization-and-failure-tests.md  2026-02-17-grpc-multi-engine.md  (+44 more)
examples/: edge_client.rs
promo/: retrocheck_ai_farm_appendix.md  toutiao_openclaw_physical_world_retrocheck_smart_kitchen.md
proto/: edge.fbs  transaction.proto
src/: actor.rs  config.rs  coordinator.rs  lib.rs  wal.rs
tests/: chaos_raft.rs  cluster_admin_add_hub.rs  codec_test.rs  debug_network.rs  edge_ab.rs  edge_cmd.rs  edge_hwm.rs  edge_nonce_cache_test.rs  edge_scan.rs  edge_schema_test.rs  edge_store.rs  edge_tcp_common.rs  edge_tcp_concurrency.rs  edge_tcp_config_security.rs  edge_tcp_limits.rs  edge_tcp_ordering_rules.rs  edge_tcp_security.rs  edge_tcp_security_banning.rs  edge_tcp_stress.rs  edge_ttl.rs  raft_apply.rs  raft_cluster.rs  raft_cluster_bootstrap.rs  raft_core_bootstrap.rs  raft_grpc_codec.rs  raft_grpc_network_client.rs  raft_grpc_replication_minimal.rs  raft_grpc_service_roundtrip.rs  raft_integration.rs  raft_node_start_grpc.rs  raft_proto_generated.rs  raft_read.rs  raft_replication.rs  raft_store.rs  raft_types.rs  router.rs  router_raft_write.rs  state_machine.rs
(+29 files in other folders)
