[package]
name = "check_program"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.32"
prost = "0.14.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.4"
tonic-prost = "0.14.4"
uuid = { version = "1.20.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14.4"
tonic-prost-build = "0.14.4"
