[package]
name = "check_program"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.32"
## ### 修改记录 (2026-02-17)
## - 原因: 需要 Raft 共识与序列化支持
## - 目的: 引入 OpenRaft 与 bincode 以承载日志复制
openraft = { version = "0.9", features = ["storage-v2", "serde"] }
bincode = "1.3"
prost = "0.14.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
## ### 修改记录 (2026-02-17)
## - 原因: 需要持久化 Raft 日志
## - 目的: 引入 sled 作为嵌入式存储
sled = "0.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.4"
tonic-prost = "0.14.4"
uuid = { version = "1.20.0", features = ["v4"] }
flatbuffers = "25.12.19"

[build-dependencies]
tonic-build = "0.14.4"
tonic-prost-build = "0.14.4"

[dev-dependencies]
## ### 修改记录 (2026-02-17)
## - 原因: 需要临时目录用于存储测试数据
## - 目的: 为 RaftStore 与 StateMachine 测试提供隔离路径
tempfile = "3.25.0"
